--- a/Home.html
+++ b/Home.html
@@ -56,7 +56,9 @@
     </div>
     <div>
         <div>
-            Order Fresh Food&#9733;
+          <h3  class="heading">
+            Order Fresh Food
+            </h3>
         </div>
 
        
@@ -127,7 +129,7 @@
             </div>
           </div>
         
-        <div>
+        <div class="ending">
             Build by <b>Bhavya Joshi</b>
         </div>
     </div>
